--- a/index.html
+++ b/index.html
@@ -9,31 +9,147 @@
 		<meta name="msapplication-TileColor" content="#ffffff" />
 		<meta name="theme-color" content="#ffffff" />
 		<link
-			type="text/css"
-			href="/assets/vendor/%40fortawesome/fontawesome-free/css/all.min.css"
 			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+		/>
+
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+			integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
 		/>
 		<link
 			rel="stylesheet"
-			href="/assets/vendor/%40glidejs/glide/dist/css/glide.core.min.css"
+			href="/assets/vendor/glidejs/glide/dist/css/glide.core.min.css"
 		/>
 		<link
 			rel="stylesheet"
-			href="/assets/vendor/%40glidejs/glide/dist/css/glide.theme.min.css"
+			href="/assets/vendor/glidejs/glide/dist/css/glide.theme.min.css"
 		/>
 		<link type="text/css" href="/assets/css/pixel.css" rel="stylesheet" />
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
+			integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
+
+		<style>
+			.btn {
+				padding-left: 25px;
+				padding-right: 25px;
+			}
+		</style>
 	</head>
-	<body>
+	<body class="bg-primary-app">
+		<div
+			class="preloader bg-dark flex-column justify-content-center align-items-center"
+		>
+			<svg
+				id="loader-logo"
+				xmlns="http://www.w3.org/2000/svg"
+				width="50"
+				height="50"
+				viewbox="0 0 64 78.4"
+			>
+				<path fill="#fff" d="M10,0h1.2V11.2H0V10A10,10,0,0,1,10,0Z" />
+				<rect
+					fill="none"
+					stroke="#fff"
+					stroke-width="11.2"
+					x="40"
+					y="17.6"
+					width="0"
+					height="25.6"
+				/>
+				<rect
+					fill="none"
+					stroke="#fff"
+					stroke-opacity="0.4"
+					stroke-width="11.2"
+					x="23"
+					y="35.2"
+					width="0"
+					height="25.6"
+				/>
+				<path
+					fill="#fff"
+					d="M52.8,35.2H64V53.8a7,7,0,0,1-7,7H52.8V35.2Z"
+				/>
+				<rect
+					fill="none"
+					stroke="#fff"
+					stroke-width="11.2"
+					x="6"
+					y="52.8"
+					width="0"
+					height="25.6"
+				/>
+				<path fill="#fff" d="M52.8,0H57a7,7,0,0,1,7,7h0v4.2H52.8V0Z" />
+				<rect
+					fill="none"
+					stroke="#fff"
+					stroke-opacity="0.4"
+					stroke-width="11.2"
+					x="57.8"
+					y="17.6"
+					width="0"
+					height="11.2"
+				/>
+				<rect
+					fill="none"
+					stroke="#fff"
+					stroke-width="11.2"
+					x="6"
+					y="35.2"
+					width="0"
+					height="11.2"
+				/>
+				<rect
+					fill="none"
+					stroke="#fff"
+					stroke-width="11.2"
+					x="40.2"
+					y="49.6"
+					width="0"
+					height="11.2"
+				/>
+				<path
+					fill="#fff"
+					d="M17.6,67.2H28.8v1.2a10,10,0,0,1-10,10H17.6V67.2Z"
+				/>
+				<rect
+					fill="none"
+					stroke="#fff"
+					stroke-opacity="0.4"
+					stroke-width="28.8"
+					x="31.6"
+					width="0"
+					height="11.2"
+				/>
+				<rect
+					fill="none"
+					stroke="#fff"
+					x="14"
+					stroke-width="28.8"
+					y="17.6"
+					width="0"
+					height="11.2"
+				/>
+			</svg>
+		</div>
 		<div id="app"></div>
 		<script type="module" src="/src/main.js"></script>
-		<script src="/assets/vendor/%40popperjs/core/dist/umd/popper.min.js"></script>
+		<script src="/assets/vendor/popperjs/core/dist/umd/popper.min.js"></script>
 		<script src="/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="/assets/vendor/headroom.js/dist/headroom.min.js"></script>
 		<script src="/assets/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 		<script src="/assets/vendor/vivus/dist/vivus.min.js"></script>
-    <!-- Vivus goated TODO: for landing animation -->
+		<!-- Vivus goated TODO: for landing animation -->
 		<script src="/assets/vendor/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script>
-		<script src="/assets/vendor/%40glidejs/glide/dist/glide.min.js"></script>
+		<script src="/assets/vendor/glidejs/glide/dist/glide.min.js"></script>
 		<!-- //GOated -->
 		<script src="/assets/js/pixel.js"></script>
 	</body>
