added authentication and authorization

--- a/index.html
+++ b/index.html
@@ -152,5 +152,33 @@
 		<script src="/assets/vendor/glidejs/glide/dist/glide.min.js"></script>
 		<!-- //GOated -->
 		<script src="/assets/js/pixel.js"></script>
+
+		<script>
+			// Example starter JavaScript for disabling form submissions if there are invalid fields
+			setTimeout(() => {
+				(function () {
+					"use strict";
+
+					// Fetch all the forms we want to apply custom Bootstrap validation styles to
+					var forms = document.querySelectorAll(".needs-validation");
+
+					// Loop over them and prevent submission
+					Array.prototype.slice.call(forms).forEach(function (form) {
+						form.addEventListener(
+							"submit",
+							function (event) {
+								if (!form.checkValidity()) {
+									event.preventDefault();
+									event.stopPropagation();
+								}
+
+								form.classList.add("was-validated");
+							},
+							false
+						);
+					});
+				})();
+			}, 2000);
+		</script>
 	</body>
 </html>
