connected to backend api

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 			class="preloader bg-dark flex-column justify-content-center align-items-center"
 		>
 			<svg
+				class="d-none"
 				id="loader-logo"
 				xmlns="http://www.w3.org/2000/svg"
 				width="50"
