--- a/index.html
+++ b/index.html
@@ -143,15 +143,32 @@
 		</div>
 		<div id="app"></div>
 		<script type="module" src="/src/main.js"></script>
-		<script src="/assets/vendor/popperjs/core/dist/umd/popper.min.js"></script>
-		<script src="/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="/assets/vendor/headroom.js/dist/headroom.min.js"></script>
-		<script src="/assets/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-		<script src="/assets/vendor/vivus/dist/vivus.min.js"></script>
-		<!-- Vivus goated TODO: for landing animation -->
-		<script src="/assets/vendor/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script>
-		<script src="/assets/vendor/glidejs/glide/dist/glide.min.js"></script>
-		<!-- //GOated -->
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.12.0/headroom.min.js"
+			integrity="sha512-9UsrKTYzS9smDm2E58MLs0ACtOki+UC4bBq4iK5wi7lJycwqcaiHxr1bdEsIVoK0l5STEzLUdYyDdFQ5OEjczw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/16.1.3/smooth-scroll.polyfills.min.js"
+			integrity="sha512-LZ6YBzwuQvIG41twjliX3HUVeAd+ErnJ0UsqRnkI4firX2l71jxbKJoax/hu7XY2tiyLl0YA2kcnz/XEW+9O3g=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js"
+			integrity="sha256-DSPDv+rS5PAURHc6mTaH9/kBinkq/DA+KRuXganawp4="
+			crossorigin="anonymous"
+		></script>
+
+		<!-- Vivus goated TODO: for la		
+			<script src="/assets/vendor/glidejs/glide/dist/glide.min.js"></script> -->
+		<!-- GOated -->
 		<script src="/assets/js/pixel.js"></script>
 
 		<script>
