--- a/index.html
+++ b/index.html
@@ -2,12 +2,77 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+		<title>Evergreen Picks</title>
 
-		<meta name="msapplication-TileColor" content="#ffffff" />
+		<meta name="keywords" content="" />
+		<meta name="description" content="" />
+		<meta
+			name="image"
+			content="https://www.evergreenpicks.com/assets/logo.png"
+		/>
+		<!-- Twitter Card data -->
+		<meta name="twitter:card" content="thesolidpayouts" />
+		<meta name="twitter:title" content="thesolidpayouts" />
+		<meta
+			name="twitter:image:src"
+			content="https://www.evergreenpicks.com/assets/logo.png"
+		/>
+		<meta name="twitter:description" content="" />
+		<meta name="twitter:creator" content="@author_handle" />
+		<!-- Twitter Summary card images must be at least 120x120px -->
+		<meta
+			name="twitter:image"
+			content="https://www.evergreenpicks.com/assets/logo.png"
+		/>
+
+		<!-- Open Graph data -->
+		<meta property="og:title" content="thesolidpayouts" />
+		<meta property="og:url" content="https://www.evergreenpicks.com/" />
+		<meta
+			property="og:image"
+			content="https://www.evergreenpicks.com/assets/logo.png"
+		/>
+		<meta property="og:description" content="The Evergreen Picks" />
+		<meta property="og:site_name" content="thesolidpayouts" />
+
+		<!-- ===============================================-->
+		<!--    Favicons-->
+		<!-- ===============================================-->
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="/assets/images/favicon/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/assets/images/favicon/favicon-32x32.png"
+		/>
+		
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="/assets/images/favicon/favicon-16x16.png"
+		/>
+		<link
+			rel="shortcut icon"
+			type="image/x-icon"
+			href="/assets/images/favicon/favicon.ico"
+		/>
+		<link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
+		<meta
+			name="msapplication-TileImage"
+			content="/assets/images/favicon/mstile-150x150.png"
+		/>
 		<meta name="theme-color" content="#ffffff" />
+		<!-- End layout styles -->
+
+
+
+
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
