--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 		<title>Evergreen Picks</title>
 
 		<meta name="keywords" content="" />
-		<meta name="description" content="" />
+		<meta name="description" content="Evergreen Picks" />
 		<meta
 			name="image"
 			content="https://www.evergreenpicks.com/assets/logo.png"
 		/>
 		<!-- Twitter Card data -->
-		<meta name="twitter:card" content="thesolidpayouts" />
-		<meta name="twitter:title" content="thesolidpayouts" />
+		<meta name="twitter:card" content="Evergreen Picks" />
+		<meta name="twitter:title" content="Evergreen Picks" />
 		<meta
 			name="twitter:image:src"
 			content="https://www.evergreenpicks.com/assets/logo.png"
 		/>
-		<meta name="twitter:description" content="" />
+		<meta name="twitter:description" content="Evergreen Picks" />
 		<meta name="twitter:creator" content="@author_handle" />
 		<!-- Twitter Summary card images must be at least 120x120px -->
 		<meta
@@ -27,14 +27,14 @@
 		/>
 
 		<!-- Open Graph data -->
-		<meta property="og:title" content="thesolidpayouts" />
+		<meta property="og:title" content="Evergreen Picks" />
 		<meta property="og:url" content="https://www.evergreenpicks.com/" />
 		<meta
 			property="og:image"
 			content="https://www.evergreenpicks.com/assets/logo.png"
 		/>
 		<meta property="og:description" content="The Evergreen Picks" />
-		<meta property="og:site_name" content="thesolidpayouts" />
+		<meta property="og:site_name" content="Evergreen Picks" />
 
 		<!-- ===============================================-->
 		<!--    Favicons-->
